# evo-cli

./: .bumpversion.cfg  .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  mkdocs.yml  opencode.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.claude/: CLAUDE.md
.claude/cli-suggestions/_pending/: disk-usage-analyzer.md  temp.md
.github/: rename_project.sh
.github/workflows/: auto_release.yml  main.yml  release.yml
evo_cli/: __init__.py  __main__.py  base.py  cli.py  cloudflare_ssh.py  console.py  mcp_registry.py  ssh_setup.py
evo_cli/commands/: claude_code.py  cloudflare.py  cred.py  download.py  fix_claude.py  gdrive.py  gh.py  harness.py  hwid.py  hwid_reset.py  localproxy.py  mcp.py  miniconda.py  netcheck.py  opencode.py  plantuml.py  site2s.py  ssh.py  sysmon.py  tts.py  update.py  wifi.py
evo_cli/commands/harness/: __init__.py  _dag.py  (+12 more)
evo_cli/credentials/: __init__.py  doctor.py  google_oauth.py  migrate.py  oauth_flow.py  registry.py  store.py  sync.py
evo_cli/tts/: __init__.py  chunking.py  core.py  creds.py  errors.py  http.py  openai.py  player.py  vbee.py
tests/: test_claude_code.py  test_cli.py  test_cloudflare_ssh.py  test_console.py  test_cred.py  test_download.py  test_fix_claude.py  test_gh.py  test_harness.py  test_harness_dag.py  test_mcp.py  test_opencode.py  test_plantuml.py  test_sysmon.py  test_tts.py  test_update.py  test_wifi.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  layout.ts  main.tsx  route.ts  types.ts
(+32 files in other folders)
